--- a/server/package.json
+++ b/server/package.json
@@ -13,15 +13,18 @@
   "license": "ISC",
   "dependencies": {
     "@types/cors": "^2.8.6",
+    "celebrate": "^12.1.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "knex": "^0.21.1",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
     "sqlite3": "^4.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
+    "@types/multer": "^1.4.3",
     "@types/mysql": "^2.15.13",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.44",
